<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gerenciamento de Servidores</string>
    <string name="host">Host</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="deletar">Deletar</string>
    <string name="conectar">Conectar</string>
    <string name="mem">Memória</string>
    <string name="sis">Sistema</string>
    <string name="hard">Hardware</string>
    <string name="user">Usuário</string>
    <string name="port">Porta</string>
    <string name="halt">Desligar</string>
    <string name="restart">Reiniciar</string>
    <string name="op">Escolha uma opção</string>
    <string name="processo">Processos</string>
    <string name="redes">Redes</string>
    <string name="discos">Discos</string>
    <string name="lista">Lista</string>
    <string name="server">Servidores</string>
    <string name="novo">Novo</string>
    <string name="novop">Novo perfil de servidor</string>
    <string name="nomeser">Nome do servidor</string>
    <string name="salvar">Salvar</string>
    <string name="editar">Editar</string>
    
    
     
     

</resources>