<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".NovoPerfilActivity" >

    <TextView
        android:id="@+id/txt_novo_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novop"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etxt_nome_servidor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nomeser"
        android:ems="10" />
    <EditText
        android:id="@+id/eTxtHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/host"
        android:maxLength="40"
        android:lines="1" 
        android:inputType="textUri"
        android:textSize="12sp"
        
     />
    <EditText
        android:id="@+id/etxt_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:ems="10" />
    <EditText
	    android:id="@+id/etxt_senha"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:inputType="textPassword"
	    android:hint="@string/senha"
	    android:ems="10" />
    <EditText
        android:id="@+id/etxt_porta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/port"
        android:ems="10" />

    <Button
        android:id="@+id/btn_conectar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar" />

</LinearLayout>
