<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ConexaoDiretaActivity" >

    <TextView
        android:id="@+id/txt_novo_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conectar"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/eTxtHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/host"
        android:ems="10" />
    <TextView
        android:id="@+id/etxt_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:ems="10" />
    <TextView
	    android:id="@+id/etxt_senha"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:inputType="textPassword"
	    android:hint="@string/senha"
	    android:ems="10" />
    <TextView
        android:id="@+id/etxt_porta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/port"
        android:ems="10" />

    <Button
        android:id="@+id/btn_conectar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conectar" />
    
    <Button
        android:id="@+id/btn_deletar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deletar" />

</LinearLayout>
