<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/titulo_main_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/server"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/scroll_lista_servidores"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/linear_layout_btn"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/titulo_main_text"
        android:orientation="vertical"
        android:gravity="top" >
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lista" />    

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="bottom" >

        <Button
            android:id="@+id/btn_novo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/novo" />

        <Button
            android:id="@+id/btn_conectar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/conectar" />
    </LinearLayout>

</RelativeLayout>