<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".HardwareActivity" >

    <TextView
        android:id="@+id/txt_hardware_titulo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/darker_gray"
        android:textAppearance="?android:attr/textAppearanceLarge"  />

    <Button
        android:id="@+id/btn_disco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discos" />

    <Button
        android:id="@+id/btn_memoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mem" />

</LinearLayout>